--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -723,7 +723,7 @@
     },
     {
       "key": "Automatic avatar optimizing (AvatarOptimizer)",
-      "value": "自動軽量化（AvatarOptimizerを使用）"
+      "value": "自動最適化（AvatarOptimizerを使用）"
     }
   ]
 }
