Fix accidental deletion of AvatarOptimization related messages.#180

--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -728,6 +728,14 @@
     {
       "key": "Restart",
       "value": "再起動"
+    },
+    {
+      "key": "Avatar Optimization",
+      "value": "アバターの最適化"
+    },
+    {
+      "key": "Automatic avatar optimizing (AvatarOptimizer)",
+      "value": "自動最適化（AvatarOptimizerを使用）"
     }
   ]
 }
