--- a/Editor/Resources/UI/TabContents/Setup/Editor/ViewpointPositionEditor/Localization/ja.json
+++ b/Editor/Resources/UI/TabContents/Setup/Editor/ViewpointPositionEditor/Localization/ja.json
@@ -28,6 +28,18 @@
     {
       "key": "Import extentions",
       "value": "拡張機能をインポート"
+    },
+    {
+      "key": "Regenerate Preview",
+      "value": "プレビューを再生成する"
+    },
+    {
+      "key": "Change the thumbnail of list",
+      "value": "リストのサムネイルの変更"
+    },
+    {
+      "key": "Do you also change the thumbnails that appear in the EAUploader avatar list?",
+      "value": "EAUplaoderのアバターリストのサムネイルにも適用しますか？"
     }
   ]
 }
