--- a/Editor/Resources/Localization/ko.json
+++ b/Editor/Resources/Localization/ko.json
@@ -26,16 +26,20 @@
       "value": "폴더에서 인포트"
     },
     {
+      "key": "Import all prefab or unitypackage in folder.",
+      "value": "폴더에 있는 모든 Prefab과 Unitypackage를 가져오기"
+    },
+    {
       "key": "Import VRM",
       "value": "VRM을 인포트"
     },
     {
       "key": "Import the .vrm(ver. 0.x) file.",
-      "value": ".vrm(ver. 0.x) 파일을 인포트합니다."
+      "value": ".vrm(ver. 0.x) 파일을 인포트합니다"
     },
     {
       "key": "Import the .unitypackage file that contains the shader.",
-      "value": "쉐이더를 포함하는 .unitypackage 파일을 인포트합니다."
+      "value": "쉐이더를 포함하는 .unitypackage 파일을 인포트합니다"
     },
     {
       "key": "Import Shaders",
@@ -56,6 +60,10 @@
     {
       "key": "Send feedback",
       "value": "피드백 보내기"
+    },
+    {
+      "key": "Open log report",
+      "value": "로그 보고서 열기"
     },
     {
       "key": "Manage Model",
@@ -740,6 +748,22 @@
     {
       "key": "Do you also change the thumbnails that appear in the EAUploader avatar list?",
       "value": "EAUplaoder의 아바타 목록의 썸네일에도 적용할 수 있나요?"
+    },
+    {
+      "key": "Created At: ",
+      "value": "업로드 날짜: "
+    },
+    {
+      "key": "Updated At: ",
+      "value": "최종 업데이트 날짜: "
+    },
+    {
+      "key": "Upload Count: ",
+      "value": "업데이트 횟수: "
+    },
+    {
+      "key": "Unlink from VRChat",
+      "value": "VRChat과의 연결 끊기"
     }
   ]
 }
